@@ -98,48 +98,57 @@ DboxMain::OpenOnInit(void)
     break;
   }
 
+  BOOL retval(FALSE);
   switch (rc2) {
-  case PWScore::BAD_DIGEST: {
-    CString cs_msg; cs_msg.Format(IDS_FILECORRUPT, m_core.GetCurFile());
-    CString cs_title(MAKEINTRESOURCE(IDS_FILEREADERROR));
-    const int yn = MessageBox(cs_msg, cs_title, MB_YESNO|MB_ICONERROR);
-    if (yn == IDNO) {
-      CDialog::OnCancel();
-      return FALSE;
+    case PWScore::BAD_DIGEST: {
+      CString cs_msg; cs_msg.Format(IDS_FILECORRUPT, m_core.GetCurFile());
+      CString cs_title(MAKEINTRESOURCE(IDS_FILEREADERROR));
+      const int yn = MessageBox(cs_msg, cs_title, MB_YESNO|MB_ICONERROR);
+      if (yn == IDNO) {
+        CDialog::OnCancel();
+        break;
+      }
     }
-  }
     // DELIBERATE FALL-THRU if user chose YES
-  case PWScore::SUCCESS:
-    m_needsreading = false;
-    startLockCheckTimer();
-    UpdateSystemTray(UNLOCKED);
-  	if (!m_bOpen) {
-  	  // Previous state was closed - reset DCA in status bar
-      SetDCAText();
-	}
-	m_bOpen = true;
-    app.AddToMRU(m_core.GetCurFile());
-    return TRUE;
+    case PWScore::SUCCESS:
+      m_needsreading = false;
+      startLockCheckTimer();
+      UpdateSystemTray(UNLOCKED);
+    	if (!m_bOpen) {
+        // Previous state was closed - reset DCA in status bar
+        SetDCAText();
+	    }
+	    m_bOpen = true;
+      app.AddToMRU(m_core.GetCurFile());
+      retval = TRUE;
+      break;
 #ifdef DEMO
-        case PWScore::LIMIT_REACHED: {
-            CString cs_msg; cs_msg.Format(IDS_LIMIT_MSG, MAXDEMO);
-            CString cs_title(MAKEINTRESOURCE(IDS_LIMIT_TITLE));
-            const int yn = MessageBox(cs_msg, cs_title,
-                                      MB_YESNO|MB_ICONWARNING);
-            if (yn == IDNO) {
-                CDialog::OnCancel();
-            }
-            m_wndToolBar.GetToolBarCtrl().EnableButton(ID_TOOLBUTTON_ADD,
+    case PWScore::LIMIT_REACHED: {
+      CString cs_msg; cs_msg.Format(IDS_LIMIT_MSG, MAXDEMO);
+      CString cs_title(MAKEINTRESOURCE(IDS_LIMIT_TITLE));
+      const int yn = MessageBox(cs_msg, cs_title,
+                                MB_YESNO|MB_ICONWARNING);
+      if (yn == IDNO) {
+        CDialog::OnCancel();
+      }
+      m_wndToolBar.GetToolBarCtrl().EnableButton(ID_TOOLBUTTON_ADD,
                                                        FALSE);
 
-            return TRUE;
-        }
+      retval = TRUE;
+    }
 #endif
-  default:
-    if (!m_IsStartSilent)
-      CDialog::OnCancel();
-    return FALSE;
+    default:
+      if (!m_IsStartSilent)
+        CDialog::OnCancel();
   }
+  if (retval == TRUE) {
+    m_core.SetDefUsername(PWSprefs::GetInstance()->
+                GetPref(PWSprefs::DefUserName));
+    m_core.SetUseDefUser(PWSprefs::GetInstance()->
+                GetPref(PWSprefs::UseDefUser) ? true : false);
+  }
+
+  return retval;
 }
 
 void
@@ -154,7 +163,7 @@ DboxMain::New()
   int rc, rc2;
 
   if (m_core.IsChanged()) {
-	CString cs_temp;
+	  CString cs_temp;
     cs_temp.Format(IDS_SAVEDATABASE, m_core.GetCurFile());
     rc = MessageBox(cs_temp, AfxGetAppName(),
                     MB_ICONQUESTION|MB_YESNOCANCEL);
@@ -206,6 +215,7 @@ DboxMain::NewFile(void)
     return PWScore::USER_CANCEL;  //User cancelled password entry
 
   ClearData();
+  PWSprefs::GetInstance()->SetDatabasePrefsToDefaults();
   const CMyString filename(m_core.GetCurFile());
   // The only way we're the locker is if it's locked & we're !readonly
   if (!filename.IsEmpty() && !m_IsReadOnly && m_core.IsLockedFile(filename))
@@ -246,6 +256,10 @@ DboxMain::Close()
 
 	// Clear all associated data
 	ClearData();
+
+  // Reset core
+  m_core.ReInit();
+
 	app.SetTooltipText(_T("PasswordSafe"));
 	UpdateSystemTray(CLOSED);
 	// Call UpdateMenuAndToolBar before UpdateStatusBar, as it sets m_bOpen
@@ -454,6 +468,10 @@ DboxMain::Open( const CMyString &pszFilename )
     ChangeOkUpdate();
     RefreshList();
     SetInitialDatabaseDisplay();
+    m_core.SetDefUsername(PWSprefs::GetInstance()->
+                GetPref(PWSprefs::DefUserName));
+    m_core.SetUseDefUser(PWSprefs::GetInstance()->
+                GetPref(PWSprefs::UseDefUser) ? true : false);
     return rc;
 }
 
