@@ -88,6 +88,7 @@ class PWSprefs {
   bool IsAPPprefsChanged() const {return m_prefs_changed[APP_PREF];}
   void ClearDBprefsChanged() {m_prefs_changed[DB_PREF] = false;}
   void ClearAPPprefsChanged() {m_prefs_changed[APP_PREF] = false;}
+  void SetDatabasePrefsToDefaults();
 
   bool GetPref(BoolPrefs pref_enum) const;
   unsigned int GetPref(IntPrefs pref_enum) const;
